# blog-post_mlflow-spark-udf

./: MLFlow-spark-udf-env-isolation.excalidraw  README.md  extracted-lines-from-inference-log-using-isolated-env  pyproject.toml
blog_post_mlflow_spark_udf/: batch_predict.py  register_model.py
blog_post_mlflow_spark_udf/my_model/: model-env.yml  model.py
